@@ -38,7 +38,7 @@ start writing after the buffer has been filled to \fInum\fP% (default 0 \- start
 log messages to \fIfile\fP instead of standard error output
 .TP 
 \fB\-u\fR <\fInum\fP>
-pause \fInum\fP microseconds after each write \- might increase performance on some drives
+pause \fInum\fP microseconds after each write \- might increase performance on some drives with very low performace (< 1 MB/sec)
 .TP 
 \fB\-f\fR
 overwrite output file if it exists already
@@ -56,7 +56,7 @@ Output help information and exit.
 Output version information and exit.
 .SH "FILES"
 .LP 
-\fI/usr/bin/mbuffer\fP 
+\fI/usr/local/bin/mbuffer\fP 
 .br 
 \fI/tmp/mbuffer*\fP 
 .SH "EXAMPLES"
